# PEQ-to-FIR

./: .gitignore  LICENSE  README.md  peq_to_fir_converter.py  peq_to_fir_gui.py  peq_to_fir_webapp_scipy_accurate.html  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_gui.txt
docs/: index.html
peq2fir/: cli.py  converter.py  exceptions.py  gui.py  output_handler.py
tests/: test_cli.py  test_converter.py
